--- a/style.css
+++ b/style.css
@@ -20,11 +20,12 @@ a:hover {
 }
 
 #password_recovery a {
-	text-decoration: none;
+	text-decoration: underline;
+	color: #6a5eff;
 
 }
 
 #password_recovery a:hover {
-	text-decoration: underline;
+	color:#000;
 	
 }
